--- a/catalogo.html
+++ b/catalogo.html
@@ -23,10 +23,9 @@
   </head>
 
   <body>
-    <!-- Add your site or application content here -->
     <header>
-      <div class="link logo">
-        <a href="index.html"> dafna szleifer </a>
+      <div class="logo-wrapper">
+        <a href="index.html" class="link logo"> dafna szleifer </a>
       </div>
       <div class="link azul catalogo">
         <a href="#"> catálogo</a>
@@ -37,23 +36,28 @@
       <div id="main-cursor"></div>
       <div id="follow-cursor"></div>
 
-      <ul class="filters-list">
-        <li>
-          <button type="button" class="filter current">todas</button>
-        </li>
+      <div class="filters-nav">
+        <div class="logo-wrapper">
+          <a href="index.html" class="link logo"> dafna szleifer </a>
+        </div>
+        <ul class="filters-list">
+          <li>
+            <button type="button" class="filter current">todas</button>
+          </li>
 
-        <li>
-          <button type="button" class="filter">playa</button>
-        </li>
+          <li>
+            <button type="button" class="filter">playa</button>
+          </li>
 
-        <li>
-          <button type="button" class="filter">perros</button>
-        </li>
+          <li>
+            <button type="button" class="filter">perros</button>
+          </li>
 
-        <li>
-          <button type="button" class="filter">señorxs</button>
-        </li>
-      </ul>
+          <li>
+            <button type="button" class="filter">señorxs</button>
+          </li>
+        </ul>
+      </div>
 
       <div class="grilla-fotos">
         <div class="foto">
