--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 
   <body class="body-home">
     <header>
-      <a href="" class="link logo">dafna szleifer</a>
+      <div class="logo-wrapper">
+        <a href="index.html" class="link logo"> dafna szleifer </a>
+      </div>
       <a href="catalogo.html" class="link azul">catálogo</a>
     </header>
 
