--- a/info.html
+++ b/info.html
@@ -27,7 +27,9 @@
     <div id="follow-cursor"></div>
 
     <header>
-      <a href="index.html" class="link logo"> dafna szleifer </a>
+      <div class="logo-wrapper">
+        <a href="index.html" class="link logo"> dafna szleifer </a>
+      </div>
       <a href="catalogo.html" class="link azul"> catálogo </a>
     </header>
 
