--- a/catalogo.html
+++ b/catalogo.html
@@ -13,7 +13,7 @@
 
     <link rel="manifest" href="site.webmanifest" />
     <link rel="apple-touch-icon" href="icon.png" />
-    <!-- Place favicon.ico in the root directory -->
+    <link rel="icon" href="icon.svg" type="image/svg+xml" />
 
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/main.css" />
@@ -163,20 +163,20 @@
     <div id="carousel-window">
       <div id="carousel">
         <button class="carousel-navigation" data-direction="previous">
-          &#8679;
+          <!-- &#8679; -->
         </button>
         <div class="slide-wrapper"></div>
         <button class="carousel-navigation" data-direction="next">
-          &#8679;
+          <!-- &#8679; -->
         </button>
       </div>
       <button id="carousel-close">&#215;</button>
     </div>
 
+    <div class="flecha"></div>
+
     <footer>
-      <div class="link rojo">
-        <a href="info.html"> info </a>
-      </div>
+      <a href="info.html" class="link rojo">info</a>
     </footer>
 
     <script src="js/vendor/modernizr-3.11.2.min.js"></script>
