--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <link rel="manifest" href="site.webmanifest" />
     <link rel="apple-touch-icon" href="icon.png" />
-    <link rel="icon" href="/icon.svg" type="image/svg+xml" />
+    <link rel="icon" href="icon.svg" type="image/svg+xml" />
 
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/main.css" />
@@ -36,9 +36,7 @@
     </main>
 
     <footer>
-      <div class="link rojo">
-        <a href="info.html">info</a>
-      </div>
+      <a href="info.html" class="link rojo">info</a>
     </footer>
 
     <script src="js/vendor/modernizr-3.11.2.min.js"></script>
