--- a/catalogo.html
+++ b/catalogo.html
@@ -162,13 +162,13 @@
 
     <div id="carousel-window">
       <div id="carousel">
-        <button class="carousel-navigation" data-direction="previous">
-          <!-- &#8679; -->
-        </button>
+        <!-- <button class="carousel-navigation" data-direction="previous">
+          &#8679;
+        </button> -->
         <div class="slide-wrapper"></div>
-        <button class="carousel-navigation" data-direction="next">
-          <!-- &#8679; -->
-        </button>
+        <!-- <button class="carousel-navigation" data-direction="next">
+          &#8679;
+        </button> -->
       </div>
       <button id="carousel-close">&#215;</button>
     </div>
