--- a/catalogo.html
+++ b/catalogo.html
@@ -73,35 +73,10 @@
           <img src="images/4.png" alt="" class="todas señorxs" />
         </div>
         <div class="foto">
-          <img src="images/5.png" alt="" class="todas señorxs perros" />
+          <img src="images/5.png" alt="" class="todas" />
         </div>
         <div class="foto">
-          <img src="images/6.png" alt="" class="todas playa señorxs" />
-        </div>
-        <div class="foto">
-          <img src="images/7.png" alt="" class="todas señorxs" />
-        </div>
-        <div class="foto">
-          <img src="images/8.png" alt="" class="todas" />
-        </div>
-
-        <div class="foto">
-          <img src="images/1.png" alt="" class="todas playa" />
-        </div>
-        <div class="foto">
-          <img src="images/2.png" alt="" class="todas perros" />
-        </div>
-        <div class="foto">
-          <img src="images/3.png" alt="" class="todas playa señorxs" />
-        </div>
-        <div class="foto">
-          <img src="images/4.png" alt="" class="todas señorxs" />
-        </div>
-        <div class="foto">
-          <img src="images/5.png" alt="" class="todas señorxs perros" />
-        </div>
-        <div class="foto">
-          <img src="images/6.png" alt="" class="todas playa señorxs" />
+          <img src="images/6.png" alt="" class="todas señorxs" />
         </div>
         <div class="foto">
           <img src="images/7.png" alt="" class="todas señorxs" />
@@ -110,52 +85,43 @@
           <img src="images/8.png" alt="" class="todas" />
         </div>
         <div class="foto">
-          <img src="images/1.png" alt="" class="todas playa" />
+          <img src="images/9.png" alt="" class="todas señorxs playa" />
         </div>
         <div class="foto">
-          <img src="images/2.png" alt="" class="todas perros" />
+          <img src="images/10.png" alt="" class="todas" />
         </div>
         <div class="foto">
-          <img src="images/3.png" alt="" class="todas playa señorxs" />
+          <img src="images/11.png" alt="" class="todas señorxs playa" />
         </div>
         <div class="foto">
-          <img src="images/4.png" alt="" class="todas señorxs" />
+          <img src="images/12.png" alt="" class="todas señorxs playa" />
         </div>
         <div class="foto">
-          <img src="images/5.png" alt="" class="todas señorxs perros" />
+          <img src="images/13.png" alt="" class="todas señorxs" />
         </div>
         <div class="foto">
-          <img src="images/6.png" alt="" class="todas playa señorxs" />
+          <img src="images/14.png" alt="" class="todas" />
         </div>
         <div class="foto">
-          <img src="images/7.png" alt="" class="todas señorxs" />
+          <img src="images/15.png" alt="" class="todas" />
         </div>
         <div class="foto">
-          <img src="images/8.png" alt="" class="todas" />
+          <img src="images/16.png" alt="" class="todas" />
         </div>
         <div class="foto">
-          <img src="images/1.png" alt="" class="todas playa" />
+          <img src="images/17.png" alt="" class="todas perros" />
         </div>
         <div class="foto">
-          <img src="images/2.png" alt="" class="todas perros" />
+          <img src="images/18.png" alt="" class="todas señorxs" />
         </div>
         <div class="foto">
-          <img src="images/3.png" alt="" class="todas playa señorxs" />
+          <img src="images/19.png" alt="" class="todas playa" />
         </div>
         <div class="foto">
-          <img src="images/4.png" alt="" class="todas señorxs" />
+          <img src="images/20.png" alt="" class="todas señorxs perros" />
         </div>
         <div class="foto">
-          <img src="images/5.png" alt="" class="todas señorxs perros" />
-        </div>
-        <div class="foto">
-          <img src="images/6.png" alt="" class="todas playa señorxs" />
-        </div>
-        <div class="foto">
-          <img src="images/7.png" alt="" class="todas señorxs" />
-        </div>
-        <div class="foto">
-          <img src="images/8.png" alt="" class="todas" />
+          <img src="images/21.png" alt="" class="todas señorxs playa" />
         </div>
       </div>
     </main>
@@ -170,7 +136,8 @@
           &#8679;
         </button> -->
       </div>
-      <button id="carousel-close">&#215;</button>
+      <!-- &#215; -->
+      <div id="carousel-close"></div>
     </div>
 
     <div class="flecha"></div>
