--- a/info.html
+++ b/info.html
@@ -46,7 +46,7 @@
         instagram: <a href="instagram.com/dafnadafne" id="ig">@dafnadafne</a>
       </p>
       <div class="foto-bio">
-        <img src="/images/dafi-bio.png" alt="" />
+        <img src="images/dafi-bio.png" alt="" />
       </div>
     </main>
 
