--- a/info.html
+++ b/info.html
@@ -35,8 +35,10 @@
 
     <main class="main-info">
       <p id="bio">
-        Nací en Buenos Aires en 1994. Soy muy pelirroja y marplatense y me gusta
-        pavement.
+        Nací en Buenos Aires en 1994. Lorem ipsum dolor sit amet, consectetur
+        adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+        laboris nisi ut aliquip ex ea commodo consequat.
         <br />
         <br />
         Para impresiones, trabajos, pedidos, etc. escribime a
