--- a/catalogo.html
+++ b/catalogo.html
@@ -64,7 +64,7 @@
           <img src="images/1.png" alt="" class="todas playa" />
         </div>
         <div class="foto">
-          <img src="images/2.png" alt="" class="todas perros" />
+          <img src="images/2.png" alt="" class="todas playa" />
         </div>
         <div class="foto">
           <img src="images/3.png" alt="" class="todas playa señorxs" />
@@ -100,7 +100,7 @@
           <img src="images/13.png" alt="" class="todas señorxs" />
         </div>
         <div class="foto">
-          <img src="images/14.png" alt="" class="todas" />
+          <img src="images/14.png" alt="" class="todas señorxs playa" />
         </div>
         <div class="foto">
           <img src="images/15.png" alt="" class="todas" />
@@ -122,6 +122,21 @@
         </div>
         <div class="foto">
           <img src="images/21.png" alt="" class="todas señorxs playa" />
+        </div>
+        <div class="foto">
+          <img src="images/22.png" alt="" class="todas" />
+        </div>
+        <div class="foto">
+          <img src="images/23.png" alt="" class="todas" />
+        </div>
+        <div class="foto">
+          <img src="images/24.png" alt="" class="todas señorxs" />
+        </div>
+        <div class="foto">
+          <img src="images/25.png" alt="" class="todas perros" />
+        </div>
+        <div class="foto">
+          <img src="images/26.png" alt="" class="todas" />
         </div>
       </div>
     </main>
