--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
     <footer>
       <a href="info.html" class="link rojo">info</a>
+      <a href="#" class="link ingles">EN</a>
     </footer>
 
     <script src="js/vendor/modernizr-3.11.2.min.js"></script>
