--- a/info.html
+++ b/info.html
@@ -45,7 +45,10 @@
         <a href="#" id="mail">dafiszlei@gmail.com</a>
         <br />
         <br />
-        instagram: <a href="instagram.com/dafnadafne" id="ig">@dafnadafne</a>
+        instagram:
+        <a target="_blank" href="https://www.instagram.com/dafnadafne/" id="ig"
+          >@dafnadafne</a
+        >
       </p>
       <div class="foto-bio">
         <img src="images/dafi-bio.png" alt="" />
