--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
     <main class="main-home">
       <div id="main-cursor"></div>
       <div id="follow-cursor"></div>
+      <iframe
+        width="100%"
+        height="100%"
+        src="https://www.youtube.com/embed/x2hw_ghPcQs?controls=0&autoplay=1&mute=1&modestbranding=1"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+      ></iframe>
     </main>
 
     <footer>
