--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
       <div id="main-cursor"></div>
       <div id="follow-cursor"></div>
       <iframe
+        class="ytplayer"
         width="100%"
         height="100%"
-        src="https://www.youtube.com/embed/x2hw_ghPcQs?controls=0&autoplay=1&mute=1&modestbranding=1"
+        src="https://www.youtube.com/embed/x2hw_ghPcQs?controls=0&autoplay=1&mute=1&modestbranding=1&disablekb=1&fs=0"
         title="YouTube video player"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
