--- a/catalogo.html
+++ b/catalogo.html
@@ -162,6 +162,7 @@
       <a href="#" class="link ingles">EN</a>
     </footer>
 
+    <script src="js/photos.js"></script>
     <script src="js/vendor/modernizr-3.11.2.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
