--- a/info.html
+++ b/info.html
@@ -55,6 +55,7 @@
       </div>
     </main>
 
+    <script src="js/photos.js"></script>
     <script src="js/vendor/modernizr-3.11.2.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
