--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <a href="info.html" class="link rojo">info</a>
       <a href="#" class="link ingles">EN</a>
     </footer>
-
+    <script src="js/photos.js"></script>
     <script src="js/vendor/modernizr-3.11.2.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
