--- a/info.html
+++ b/info.html
@@ -30,7 +30,7 @@
       <div class="logo-wrapper">
         <a href="index.html" class="link logo"> dafna szleifer </a>
       </div>
-      <a href="catalogo.html" class="link azul"> catálogo </a>
+      <a href="catalogo.html" class="link azul"> fotos </a>
     </header>
 
     <main class="main-info">
