--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
   <body class="body-home">
     <header>
       <div class="logo-wrapper">
-        <a href="index.html" class="link logo"> dafna szleifer </a>
+        <a href="/index.html" class="link logo"> dafna szleifer </a>
       </div>
-      <a href="catalogo.html" class="link azul">catálogo</a>
+      <a href="/catalogo.html" class="link azul">fotos</a>
     </header>
 
     <main class="main-home">
