--- a/catalogo.html
+++ b/catalogo.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="">
   <head>
     <meta charset="utf-8" />
-    <title>catálogo | dafna szleifer</title>
+    <title>fotos | dafna szleifer</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -11,13 +11,13 @@
     <meta property="og:url" content="" />
     <meta property="og:image" content="" />
 
-    <link rel="manifest" href="site.webmanifest" />
-    <link rel="apple-touch-icon" href="icon.png" />
-    <link rel="icon" href="icon.svg" type="image/svg+xml" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="apple-touch-icon" href="/icon.png" />
+    <link rel="icon" href="/icon.svg" type="image/svg+xml" />
 
-    <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="/css/normalize.css" />
+    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
 
     <meta name="theme-color" content="#fafafa" />
   </head>
@@ -25,10 +25,10 @@
   <body>
     <header>
       <div class="logo-wrapper">
-        <a href="index.html" class="link logo"> dafna szleifer </a>
+        <a href="/index.html" class="link logo"> dafna szleifer </a>
       </div>
       <div class="link azul catalogo">
-        <a href="#"> catálogo</a>
+        <a href="/#"> fotos</a>
       </div>
     </header>
 
@@ -38,7 +38,7 @@
 
       <div class="filters-nav">
         <div class="logo-wrapper">
-          <a href="index.html" class="link logo"> dafna szleifer </a>
+          <a href="/index.html" class="link logo"> dafna szleifer </a>
         </div>
         <ul class="filters-list">
           <li>
@@ -46,7 +46,11 @@
           </li>
 
           <li>
-            <button type="button" class="filter">playa</button>
+            <button type="button" class="filter">compañía</button>
+          </li>
+
+          <li>
+            <button type="button" class="filter">fucsia</button>
           </li>
 
           <li>
@@ -56,87 +60,103 @@
           <li>
             <button type="button" class="filter">señorxs</button>
           </li>
+
+          <li>
+            <button type="button" class="filter">balnearias</button>
+          </li>
+
+          <li>
+            <button type="button" class="filter">posiciones</button>
+          </li>
+
+          <li>
+            <button type="button" class="filter">rincones</button>
+          </li>
+
+          <li>
+            <button type="button" class="filter">autos</button>
+          </li>
         </ul>
       </div>
 
       <div class="grilla-fotos">
         <div class="foto">
-          <img src="images/1.png" alt="" class="todas playa" />
+          <img src="/images/1.png" alt="" class="todas playa" />
         </div>
         <div class="foto">
-          <img src="images/2.png" alt="" class="todas playa" />
+          <img src="/images/2.png" alt="" class="todas playa" />
         </div>
         <div class="foto">
-          <img src="images/3.png" alt="" class="todas playa señorxs" />
+          <img src="/images/3.png" alt="" class="todas playa señorxs" />
         </div>
         <div class="foto">
-          <img src="images/4.png" alt="" class="todas señorxs" />
+          <img src="/images/4.png" alt="" class="todas señorxs" />
         </div>
         <div class="foto">
-          <img src="images/5.png" alt="" class="todas" />
+          <img src="/images/5.png" alt="" class="todas" />
         </div>
         <div class="foto">
-          <img src="images/6.png" alt="" class="todas señorxs" />
+          <img src="/images/6.png" alt="" class="todas señorxs" />
         </div>
         <div class="foto">
-          <img src="images/7.png" alt="" class="todas señorxs" />
+          <img src="/images/7.png" alt="" class="todas señorxs" />
         </div>
         <div class="foto">
-          <img src="images/8.png" alt="" class="todas" />
+          <img src="/images/8.png" alt="" class="todas" />
         </div>
         <div class="foto">
-          <img src="images/9.png" alt="" class="todas señorxs playa" />
+          <img src="/images/9.png" alt="" class="todas señorxs playa" />
         </div>
         <div class="foto">
-          <img src="images/10.png" alt="" class="todas" />
+          <img src="/images/10.png" alt="" class="todas" />
         </div>
         <div class="foto">
-          <img src="images/11.png" alt="" class="todas señorxs playa" />
+          <img src="/images/11.png" alt="" class="todas señorxs playa" />
         </div>
         <div class="foto">
-          <img src="images/12.png" alt="" class="todas señorxs playa" />
+          <img src="/images/12.png" alt="" class="todas señorxs playa" />
         </div>
         <div class="foto">
-          <img src="images/13.png" alt="" class="todas señorxs" />
+          <img src="/images/13.png" alt="" class="todas señorxs" />
         </div>
         <div class="foto">
-          <img src="images/14.png" alt="" class="todas señorxs playa" />
+          <img src="/images/14.png" alt="" class="todas señorxs playa" />
         </div>
         <div class="foto">
-          <img src="images/15.png" alt="" class="todas" />
+          <img src="/images/15.png" alt="" class="todas" />
         </div>
         <div class="foto">
-          <img src="images/16.png" alt="" class="todas" />
+          <img src="/images/16.png" alt="" class="todas" />
         </div>
         <div class="foto">
-          <img src="images/17.png" alt="" class="todas perros" />
+          <img src="/images/17.png" alt="" class="todas perros" />
         </div>
         <div class="foto">
-          <img src="images/18.png" alt="" class="todas señorxs" />
+          <img src="/images/18.png" alt="" class="todas señorxs" />
         </div>
         <div class="foto">
-          <img src="images/19.png" alt="" class="todas playa" />
+          <img src="/images/19.png" alt="" class="todas playa" />
         </div>
         <div class="foto">
-          <img src="images/20.png" alt="" class="todas señorxs perros" />
+          <img src="/images/20.png" alt="" class="todas señorxs perros" />
         </div>
         <div class="foto">
-          <img src="images/21.png" alt="" class="todas señorxs playa" />
+          <img src="/images/21.png" alt="" class="todas señorxs playa" />
         </div>
         <div class="foto">
-          <img src="images/22.png" alt="" class="todas" />
+          <img src="/images/22.png" alt="" class="todas" />
         </div>
         <div class="foto">
-          <img src="images/23.png" alt="" class="todas" />
+          <img src="/images/23.png" alt="" class="todas" />
         </div>
         <div class="foto">
-          <img src="images/24.png" alt="" class="todas señorxs" />
+          <img src="/images/24.png" alt="" class="todas señorxs" />
         </div>
         <div class="foto">
-          <img src="images/25.png" alt="" class="todas perros" />
+          <img src="/images/25.png" alt="" class="todas perros" />
         </div>
         <div class="foto">
-          <img src="images/26.png" alt="" class="todas" />
+          <img src="/images/26.png" alt="" class="todas" />
         </div>
       </div>
     </main>
@@ -158,14 +178,14 @@
     <div class="flecha"></div>
 
     <footer>
-      <a href="info.html" class="link rojo">info</a>
-      <a href="#" class="link ingles">EN</a>
+      <a href="/info.html" class="link rojo">info</a>
+      <a href="/#" class="link ingles">EN</a>
     </footer>
 
-    <script src="js/photos.js"></script>
-    <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/js/photos.js"></script>
+    <script src="/js/vendor/modernizr-3.11.2.min.js"></script>
+    <script src="/js/plugins.js"></script>
+    <script src="/js/main.js"></script>
 
     <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
     <script>
@@ -179,6 +199,6 @@
       ga("set", "transport", "beacon");
       ga("send", "pageview");
     </script>
-    <script src="https://www.google-analytics.com/analytics.js" async></script>
+    <script src="/https://www.google-analytics.com/analytics.js" async></script>
   </body>
 </html>
