--- a/catalogo.html
+++ b/catalogo.html
@@ -80,6 +80,7 @@
       </div>
 
       <div class="grilla-fotos">
+        <!--         
         <div class="foto">
           <img src="/images/1.png" alt="" class="todas playa" />
         </div>
@@ -157,7 +158,7 @@
         </div>
         <div class="foto">
           <img src="/images/26.png" alt="" class="todas" />
-        </div>
+        </div> -->
       </div>
     </main>
 
