--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <main class="main-home">
       <div id="main-cursor"></div>
       <div id="follow-cursor"></div>
-      <iframe
+      <!-- <iframe
         class="ytplayer"
         width="100%"
         height="100%"
@@ -42,7 +42,7 @@
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen
-      ></iframe>
+      ></iframe> -->
     </main>
 
     <footer>
