--- a/info.html
+++ b/info.html
@@ -28,7 +28,8 @@
 
     <header>
       <div class="logo-wrapper">
-        <a href="index.html" class="link logo"> dafna szleifer </a>
+        <a href="index.html" class="link logo" id="desktop"> dafna szleifer </a>
+        <a href="index.html" class="link logo" id="mobile"> dafna </a>
       </div>
       <a href="catalogo.html" class="link azul"> fotos </a>
     </header>
