--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
   <body class="body-home">
     <header>
       <div class="logo-wrapper">
-        <a href="/index.html" class="link logo"> dafna szleifer </a>
+        <a href="index.html" class="link logo" id="desktop"> dafna szleifer </a>
+        <a href="index.html" class="link logo" id="mobile"> dafna </a>
       </div>
       <a href="/catalogo.html" class="link azul">fotos</a>
     </header>
