--- a/catalogo.html
+++ b/catalogo.html
@@ -25,7 +25,8 @@
   <body>
     <header>
       <div class="logo-wrapper">
-        <a href="/index.html" class="link logo"> dafna szleifer </a>
+        <a href="index.html" class="link logo" id="desktop"> dafna szleifer </a>
+        <a href="index.html" class="link logo" id="mobile"> dafna </a>
       </div>
       <div class="link azul catalogo">
         <a href="/#"> fotos</a>
@@ -79,87 +80,7 @@
         </ul>
       </div>
 
-      <div class="grilla-fotos">
-        <!--         
-        <div class="foto">
-          <img src="/images/1.png" alt="" class="todas playa" />
-        </div>
-        <div class="foto">
-          <img src="/images/2.png" alt="" class="todas playa" />
-        </div>
-        <div class="foto">
-          <img src="/images/3.png" alt="" class="todas playa señorxs" />
-        </div>
-        <div class="foto">
-          <img src="/images/4.png" alt="" class="todas señorxs" />
-        </div>
-        <div class="foto">
-          <img src="/images/5.png" alt="" class="todas" />
-        </div>
-        <div class="foto">
-          <img src="/images/6.png" alt="" class="todas señorxs" />
-        </div>
-        <div class="foto">
-          <img src="/images/7.png" alt="" class="todas señorxs" />
-        </div>
-        <div class="foto">
-          <img src="/images/8.png" alt="" class="todas" />
-        </div>
-        <div class="foto">
-          <img src="/images/9.png" alt="" class="todas señorxs playa" />
-        </div>
-        <div class="foto">
-          <img src="/images/10.png" alt="" class="todas" />
-        </div>
-        <div class="foto">
-          <img src="/images/11.png" alt="" class="todas señorxs playa" />
-        </div>
-        <div class="foto">
-          <img src="/images/12.png" alt="" class="todas señorxs playa" />
-        </div>
-        <div class="foto">
-          <img src="/images/13.png" alt="" class="todas señorxs" />
-        </div>
-        <div class="foto">
-          <img src="/images/14.png" alt="" class="todas señorxs playa" />
-        </div>
-        <div class="foto">
-          <img src="/images/15.png" alt="" class="todas" />
-        </div>
-        <div class="foto">
-          <img src="/images/16.png" alt="" class="todas" />
-        </div>
-        <div class="foto">
-          <img src="/images/17.png" alt="" class="todas perros" />
-        </div>
-        <div class="foto">
-          <img src="/images/18.png" alt="" class="todas señorxs" />
-        </div>
-        <div class="foto">
-          <img src="/images/19.png" alt="" class="todas playa" />
-        </div>
-        <div class="foto">
-          <img src="/images/20.png" alt="" class="todas señorxs perros" />
-        </div>
-        <div class="foto">
-          <img src="/images/21.png" alt="" class="todas señorxs playa" />
-        </div>
-        <div class="foto">
-          <img src="/images/22.png" alt="" class="todas" />
-        </div>
-        <div class="foto">
-          <img src="/images/23.png" alt="" class="todas" />
-        </div>
-        <div class="foto">
-          <img src="/images/24.png" alt="" class="todas señorxs" />
-        </div>
-        <div class="foto">
-          <img src="/images/25.png" alt="" class="todas perros" />
-        </div>
-        <div class="foto">
-          <img src="/images/26.png" alt="" class="todas" />
-        </div> -->
-      </div>
+      <div class="grilla-fotos"></div>
     </main>
 
     <div id="carousel-window">
