--- a/info.html
+++ b/info.html
@@ -52,7 +52,7 @@
         >
       </p>
       <div class="foto-bio">
-        <img src="images/dafi-bio.png" alt="" />
+        <img src="images/bio.jpg" alt="dafna niña" />
       </div>
     </main>
 
