--- a/catalogo.html
+++ b/catalogo.html
@@ -12,12 +12,12 @@
     <meta property="og:image" content="" />
 
     <link rel="manifest" href="/site.webmanifest" />
-    <link rel="apple-touch-icon" href="/icon.png" />
-    <link rel="icon" href="/icon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="icon.png" />
+    <link rel="icon" href="icon.svg" type="image/svg+xml" />
 
-    <link rel="stylesheet" href="/css/normalize.css" />
-    <link rel="stylesheet" href="/css/main.css" />
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/styles.css" />
 
     <meta name="theme-color" content="#fafafa" />
   </head>
@@ -25,10 +25,8 @@
   <body>
     <header>
       <div class="logo-wrapper">
-        <a href="/index.html" class="link logo" id="desktop">
-          dafna szleifer
-        </a>
-        <a href="/index.html" class="link logo" id="mobile"> dafna </a>
+        <a href="index.html" class="link logo" id="desktop"> dafna szleifer </a>
+        <a href="index.html" class="link logo" id="mobile"> dafna </a>
       </div>
       <div class="link azul catalogo">
         <a href="#"> fotos</a>
@@ -108,14 +106,14 @@
     <div class="flecha"></div>
 
     <footer>
-      <a href="/info.html" class="link rojo">info</a>
-      <a href="/#" class="link ingles">EN</a>
+      <a href="info.html" class="link rojo">info</a>
+      <a href="#" class="link ingles">EN</a>
     </footer>
 
-    <script src="/js/photos.js"></script>
-    <script src="/js/vendor/modernizr-3.11.2.min.js"></script>
-    <script src="/js/plugins.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="js/photos.js"></script>
+    <script src="js/vendor/modernizr-3.11.2.min.js"></script>
+    <script src="js/plugins.js"></script>
+    <script src="js/main.js"></script>
 
     <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
     <script>
