--- a/index.html
+++ b/index.html
@@ -28,22 +28,14 @@
         <a href="index.html" class="link logo" id="desktop"> dafna szleifer </a>
         <a href="index.html" class="link logo" id="mobile"> dafna </a>
       </div>
-      <a href="/catalogo.html" class="link azul">fotos</a>
+      <a href="catalogo.html" class="link azul">fotos</a>
     </header>
 
     <main class="main-home">
       <div id="main-cursor"></div>
-      <div id="follow-cursor"></div>
-      <!-- <iframe
-        class="ytplayer"
-        width="100%"
-        height="100%"
-        src="https://www.youtube.com/embed/x2hw_ghPcQs?controls=0&autoplay=1&mute=1&modestbranding=1&disablekb=1&fs=0"
-        title="YouTube video player"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen
-      ></iframe> -->
+      <video autoplay muted>
+        <source src="videos/IMG_0829.MOV" type="video/mp4" />
+      </video>
     </main>
 
     <footer>
