--- a/fotos.html
+++ b/fotos.html
@@ -28,12 +28,12 @@
         <a href="index.html" class="link logo" id="desktop"> dafna szleifer </a>
         <a href="index.html" class="link logo" id="mobile"> dafna </a>
       </div>
-      <div class="link azul catalogo">
+      <div class="link azul fotos">
         <a href="#"> fotos</a>
       </div>
     </header>
 
-    <main class="main-catalogo">
+    <main class="main-fotos">
       <div id="main-cursor"></div>
 
       <div class="filters-nav">
