--- a/info.html
+++ b/info.html
@@ -30,7 +30,7 @@
         <a href="index.html" class="link logo" id="desktop"> dafna szleifer </a>
         <a href="index.html" class="link logo" id="mobile"> dafna </a>
       </div>
-      <a href="catalogo.html" class="link azul"> fotos </a>
+      <a href="fotos.html" class="link azul"> fotos </a>
     </header>
 
     <main class="main-info">
