--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <a href="index.html" class="link logo" id="desktop"> dafna szleifer </a>
         <a href="index.html" class="link logo" id="mobile"> dafna </a>
       </div>
-      <a href="fotosS.html" class="link azul">fotos</a>
+      <a href="fotos.html" class="link azul">fotos</a>
     </header>
 
     <main class="main-home">
