--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
 
     <main class="main-home">
       <div id="main-cursor"></div>
-      <video autoplay muted>
-        <source src="videos/IMG_0829.MOV" type="video/mp4" />
-      </video>
+      <div class="video-wrapper">
+        <video autoplay muted>
+          <source src="videos/IMG_0829.MOV" type="video/mp4" />
+        </video>
+      </div>
     </main>
 
     <footer>
